# dataset-enrichment-with-llms

./: .gitignore  LICENSE  README.md  docker-compose.yml  enrich_houses.sh  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml  pylint.yml  pytest.yml
app/: Dockerfile  pyproject.toml  requirements.txt
app/house_features_validation_data/: 2a54c6e5.json  3518ba1c.json  3af436a8.json  c14b5de7.json  d2a2d924.json  fe1aaba9.json
app/src/: asynchronous_requests_example.py
app/src/house_bot/: types.py
app/src/house_bot/enrichment/: cli.py  enrichment_strategies.py  enrichment_types.py  house_descriptions.py  housing_data_io.py
app/src/house_bot/enrichment/llms/: google_palm.py  openai_gpt.py
app/tests/: test_openai_gpt.py  test_pytest.py  test_using_housing.py
data/: houses.parquet
house_features_validation_data/: 1cae07e6.json  d27ecb4b.json  e95a9f51.json  edfebeac.json
src/house_bot/enrichment/: cli.py  enrichment_strategies.py  enrichment_types.py  housing_data_io.py  summarize_mlflow_experiments.py
src/house_bot/storage/: firestore.py
