[project]
name = "pararius-scraper"
version = "0.0.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
quality_checks = [
    "ruff==0.0.252",
    "black==23.1.0",
]
tests = [
    "pytest==7.2.1",
    "pytest-cov==4.0.0",
    "fastparquet==2023.2.0",
    "anyio==3.6.2",
    "httpx==0.24.0"
]