[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "house_bot"
version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/house_bot"]

[project.optional-dependencies]
quality_checks = [
    "ruff==0.0.252",
    "black==23.1.0",
]
tests = [
    "pytest==7.2.1"
]